# ffbetool

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cog.toml  paste.sh
.github/workflows/: release.yml  test.yml
src/: cgg.rs  cgs.rs  character_db.rs  constants.rs  discovery.rs  error.rs  image.rs  imageops.rs  lib.rs  metadata.rs  validation.rs
test_data/: unit_cgg_204000103.csv
tests/: README.md  empty_frame_handling.rs
tests/fixtures/: unit_limit_atk_with_empty_cgs_401012417.csv
