[package]
name = "ffbetool"
version = "1.1.0"
authors = ["Kevin Phung <phung.kevin@gmail.com>"]
edition = "2024"
description = """
ffbetool is a tool to assemble spritesheets from the Final Fantasy Brave Exvius
sprite atlas assets.
"""


[[bin]]
name = "ffbetool"
path = "src/bin/main.rs"

[dependencies]
apng = { version = "0.3.4", features = ["png"] }
image = "0.24.9"
png = "0.17.16"
log = "0.4.27"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
